# microbit-workspace

./: .gitignore  .gitmodules  README.md  pyproject.toml
python/: README.md
python/data/: data-logger.htm  pomodoro-timer.htm
python/src/: browse-all-music.py  browse-all-sounds.py  browse-all-symbols.py  compass-fake.py  compass-real.py  data-logger.py  dice.py  entropy-meter.py  game-of-life.py  hello-world.py  high-card.py  light-meter.py  messenger.py  pet-the-microbit.py  play-all-sounds.py  pomodoro-timer.py  press-a-button.py  random-pointer.py  random-timer.py  rock-paper-scissors-lizzard-spock.py  rock-paper-scissors.py  shake-logger.py  show-all-symbols.py  sound-meter.py  spin-the-wheel.py  temperature-meter.py  timer.py
rust/: README.md
tinygo/: README.md
